@@ -1,3 +1,12 @@
+2006-03-18 [colin]	2.0.0cvs152
+
+	* src/summaryview.c
+		Set cursor to watch for execution (fixes lack
+		of watch-cursor when dnd'ing hundreds of mails)
+	* src/gtk/filesel.c
+		Check that mime type is 'image/*' before updating
+		the preview (maybe fix crashes on Solaris+gtk2.8.4 ?)
+
 2006-03-18 [colin]	2.0.0cvs151
 
 	* src/mainwindow.c
